# luvtter

./: .gitignore  README.md  build.gradle.kts  docker-compose.yml  gradle.properties  luvtter.example.toml  settings.gradle.kts
.github/workflows/: ci.yml  release.yml
androidApp/: build.gradle.kts
androidApp/src/main/: AndroidManifest.xml
androidApp/src/main/res/values/: strings.xml  themes.xml
api-contract/: build.gradle.kts
api-contract/src/commonMain/kotlin/com/letter/contract/: Api.kt  HelloDto.kt
aur/: README.md
aur/luvtter-desktop-bin/: .SRCINFO  PKGBUILD  README.md  luvtter-desktop.desktop
aur/luvtter-desktop-git/: .SRCINFO  PKGBUILD  luvtter-desktop.desktop
composeApp/: build.gradle.kts
composeApp/src/androidMain/kotlin/com/letter/app/: Platform.android.kt
composeApp/src/androidMain/kotlin/com/luvtter/app/: Platform.android.kt
doc/: UI迁移计划.md  deployment.md  development.md  信件应用-功能设计文档.md  信件应用-技术设计文档.md  技术路线图.md
gradle/: libs.versions.toml
server/: Dockerfile  build.gradle.kts
server/src/main/resources/: application.yaml  logback.xml
server/src/main/resources/db/migration/: V10__user_onboarding_state.sql  V1__initial_schema.sql  V2__core_schema.sql  V3__seed_catalog.sql  V4__current_address.sql  V5__attachment_object_key.sql  V6__bigram_search.sql  V7__notification_quiet_hours.sql  V8__scan_object_key.sql  V9__handwriting_object_key.sql
shared/: build.gradle.kts
worker/: Dockerfile  README.md  pyproject.toml
worker/worker/: config.py  db.py  handler.py  main.py  ocr.py  storage.py
(+259 files in other folders)
